# goit-algo-hw-06

./: README.md  pyproject.toml
data/: стаття_2.txt
j01/: main.py
