[project]
name = "goit-algo-hw-06"
version = "0.1.0"
description = "Домашнє завдання до теми 5 'Алгоритми пошуку'"

authors = [
    {name = "youry07",email = "youry@ukr.net"}
]

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    
]

[project.scripts]
main = "j01.main:main"

[tool.poetry]
packages = [{include = "j01", from = "."}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
